--- a/templates/workshop/sections.html
+++ b/templates/workshop/sections.html
@@ -94,7 +94,7 @@
                 <label for="lecture_id">Лекция {{lecture.enumerator}}</label>
             </div> 
             <div class="col-8">
-                <strong>{{lecture.title}};. Дл.: {{lecture.length_1}} Размер:
+                <strong>{{lecture.title}};. Дл.: {{lecture.length_1}} мин.; Размер:
                     {{lecture.size_mb}} Mb</strong>
             </div>
             <div class="col-1">
